# max

./: .gitignore  Cargo.toml  LICENSE  README.md  config.default.toml
.github/workflows/: release.yml
npm-package/: README.md  package.json
npm-package/scripts/: install.js
src/: main.rs
src/agent/: mod.rs  orchestrator.rs
src/buddy/: mod.rs
src/cli/: mod.rs  repl.rs
src/cli/commands/: chat.rs  code.rs  mod.rs
src/config/: commands.rs  mod.rs
src/memory/: commands.rs  mod.rs
src/model/: commands.rs  mod.rs
src/tools/: mod.rs  sandbox.rs
src/ui/: animations.rs  mod.rs  spinner.rs  splash.rs
